--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@ let jumpForce = -8;
 let speed = 2.2;
 let score = 0;
 let gameOver = false;
-let shieldTime = 0;
+
+// Dois tipos de escudo
+let shieldTimeVisible = 0;   // azul
+let shieldTimeInvisible = 0; // perks / Easter Egg
+
 let choosingPerk = false;
 let choosingEasterEgg = false;
 let perkChoices = [];
 let easterEggChoices = [];
+
 let birdMode = null; // "explosive", "super", "slime"
 let birdModeTime = 0;
 let birdParalyzed = 0;
@@ -68,15 +73,23 @@ canvas.addEventListener("touchstart", e => {
 }, { passive: false });
 
 // --- PIPE SPAWN ---
-let lastGapY = canvas.height / 2; // para reduzir diferença de altura
+let lastGapY = canvas.height / 2;
+let lastPipeX = 0;
+let lastPipeMoving = false;
+
 function spawnPipe() {
     const gap = 150;
-    const diff = 60; // diferença máxima do cano anterior
+    const diff = 60;
     let gapY = lastGapY + (Math.random() * diff * 2 - diff);
     gapY = Math.max(80, Math.min(canvas.height - gap - 80, gapY));
     lastGapY = gapY;
 
-    const moving = Math.random() < 0.25; // minoria se mexe
+    let moving = Math.random() < 0.25;
+    if (moving && !lastPipeMoving) {
+        const minDist = 300;
+        if (canvas.width - lastPipeX < minDist) moving = false;
+    }
+
     const pipe = {
         x: canvas.width,
         width: 60,
@@ -93,10 +106,10 @@ function spawnPipe() {
     };
     pipes.push(pipe);
 
-    // spawn item normal
-    if (pipe.hasItem) spawnItemInPipe(pipe);
+    lastPipeX = pipe.x;
+    lastPipeMoving = moving;
 
-    // chance Easter Egg 1/1000
+    if (pipe.hasItem) spawnItemInPipe(pipe);
     if (Math.random() < 0.001) spawnItemInPipe(pipe, "easterEgg");
 }
 
@@ -120,13 +133,13 @@ function openPerkChoice() {
         { title: "Gravidade Leve", desc: "Cai mais devagar", apply: () => gravity -= 0.05 },
         { title: "Velocidade +", desc: "Tudo fica mais rápido", apply: () => speed += 0.3 }
     ].sort(() => 0.5 - Math.random()).slice(0, 2);
-    shieldTime = 60; // mini escudo invisível de 1 segundo
+    shieldTimeInvisible = 60; // 1s invisível
 }
 
 function handlePerkSelect(y) {
-    perkChoices.forEach((p, i) => {
-        const boxY = canvas.height / 2 - 100 + i * 120;
-        if (y > boxY && y < boxY + 80) {
+    perkChoices.forEach((p,i)=>{
+        const boxY = canvas.height/2-100 + i*120;
+        if (y>boxY && y<boxY+80){
             p.apply();
             choosingPerk = false;
         }
@@ -137,138 +150,138 @@ function handlePerkSelect(y) {
 function openEasterEggChoice() {
     choosingEasterEgg = true;
     easterEggChoices = [
-        { title: "Pássaro Explosivo", desc: "Deleta tudo que toca por 40s", apply: () => { birdMode = "explosive"; birdModeTime = 2400; } },
-        { title: "Super Pássaro", desc: "Invencível por 40s", apply: () => { birdMode = "super"; birdModeTime = 2400; shieldTime = 2400; } },
-        { title: "Slime Grudenta", desc: "Paralisa 3s ao tocar algo, dura 60s", apply: () => { birdMode = "slime"; birdModeTime = 3600; } }
+        { title: "Pássaro Explosivo", desc: "Deleta tudo que toca por 40s", apply: () => { birdMode="explosive"; birdModeTime=2400; } },
+        { title: "Super Pássaro", desc: "Invencível por 40s", apply: () => { birdMode="super"; birdModeTime=2400; shieldTimeInvisible=2400; } },
+        { title: "Slime Grudenta", desc: "Paralisa 3s ao tocar algo, dura 60s", apply: () => { birdMode="slime"; birdModeTime=3600; } }
     ];
-    shieldTime = 60; // mini escudo invisível
+    shieldTimeInvisible = 60; // mini escudo invisível
 }
 
-function handleEasterEggSelect(y) {
-    easterEggChoices.forEach((p, i) => {
-        const boxY = canvas.height / 2 - 100 + i * 120;
-        if (y > boxY && y < boxY + 80) {
+function handleEasterEggSelect(y){
+    easterEggChoices.forEach((p,i)=>{
+        const boxY = canvas.height/2-100 + i*120;
+        if (y>boxY && y<boxY+80){
             p.apply();
-            choosingEasterEgg = false;
+            choosingEasterEgg=false;
         }
     });
 }
 
-canvas.addEventListener("click", e => {
-    if (choosingPerk) handlePerkSelect(e.offsetY);
-    if (choosingEasterEgg) handleEasterEggSelect(e.offsetY);
+canvas.addEventListener("click", e=>{
+    if(choosingPerk) handlePerkSelect(e.offsetY);
+    if(choosingEasterEgg) handleEasterEggSelect(e.offsetY);
 });
-
-canvas.addEventListener("touchstart", e => {
+canvas.addEventListener("touchstart", e=>{
     const rect = canvas.getBoundingClientRect();
     const y = e.touches[0].clientY - rect.top;
-    if (choosingPerk) handlePerkSelect(y);
-    if (choosingEasterEgg) handleEasterEggSelect(y);
-}, { passive: false });
+    if(choosingPerk) handlePerkSelect(y);
+    if(choosingEasterEgg) handleEasterEggSelect(y);
+}, {passive:false});
 
 // --- LOOP ---
 function update() {
-    if (gameOver || choosingPerk || choosingEasterEgg) return;
+    if(gameOver || choosingPerk || choosingEasterEgg) return;
 
-    if (birdParalyzed > 0) birdParalyzed--;
-    if (birdModeTime > 0) birdModeTime--; else birdMode = null;
+    if(birdParalyzed>0) birdParalyzed--;
+    if(birdModeTime>0) birdModeTime--; else birdMode=null;
 
-    bird.vy += gravity;
-    bird.y += bird.vy;
+    bird.vy+=gravity;
+    if(birdParalyzed<=0) bird.y+=bird.vy;
 
-    if (bird.y + bird.r > canvas.height) gameOver = true;
-    if (bird.y - bird.r < 0) bird.y = bird.r;
+    if(bird.y+bird.r>canvas.height) gameOver=true;
+    if(bird.y-bird.r<0) bird.y=bird.r;
 
-    pipes.forEach(p => {
-        p.x -= speed;
+    pipes.forEach(p=>{
+        p.x-=speed;
 
-        if (p.moving) {
-            p.gapY += p.moveSpeed * p.moveDir;
-            if (Math.abs(p.gapY - p.baseY) > p.moveRange) p.moveDir *= -1;
+        if(p.moving){
+            p.gapY+=p.moveSpeed*p.moveDir;
+            if(Math.abs(p.gapY - p.baseY)>p.moveRange) p.moveDir*=-1;
         }
 
-        if (!p.passed && p.x + p.width < bird.x) {
-            score++;
-            p.passed = true;
-        }
+        if(!p.passed && p.x + p.width < bird.x){ score++; p.passed=true; }
 
-        // colisão com cano
-        const hit = bird.x + bird.r > p.x &&
-                    bird.x - bird.r < p.x + p.width &&
-                    (bird.y - bird.r < p.gapY || bird.y + bird.r > p.gapY + p.gap);
+        const hit = bird.x+bird.r>p.x && bird.x-bird.r<p.x+p.width && (bird.y-bird.r<p.gapY || bird.y+bird.r>p.gapY+p.gap);
 
-        if (hit) {
-            if (birdMode === "explosive") {
-                // deleta cano
+        const invincible = shieldTimeVisible>0 || shieldTimeInvisible>0 || birdMode==="super";
+
+        if(hit){
+            if(birdMode==="explosive"){
                 const index = pipes.indexOf(p);
-                if (index >= 0) pipes.splice(index, 1);
-            } else if (birdMode === "slime") {
-                birdParalyzed = 180; // 3 segundos
-            } else if (shieldTime <= 0) gameOver = true;
+                if(index>=0) pipes.splice(index,1);
+            } else if(birdMode==="slime"){
+                birdParalyzed=180;
+            } else if(!invincible) gameOver=true;
         }
     });
 
-    items.forEach((it, i) => {
-        it.x = it.pipe.x + it.pipe.width / 2;
-        it.y = it.pipe.gapY + it.pipe.gap / 2;
-        it.x -= speed;
+    items.forEach((it,i)=>{
+        it.x=it.pipe.x + it.pipe.width/2;
+        it.y=it.pipe.gapY + it.pipe.gap/2;
+        it.x-=speed;
 
-        if (it.x < -20) items.splice(i, 1);
+        if(it.x<-20) items.splice(i,1);
 
-        const d = Math.hypot(bird.x - it.x, bird.y - it.y);
-        if (d < bird.r + it.r) {
-            if (it.kind === "shield") shieldTime = 180;
-            if (it.kind === "perk") openPerkChoice();
-            if (it.kind === "easterEgg") openEasterEggChoice();
-            items.splice(i, 1);
+        const d = Math.hypot(bird.x-it.x,bird.y-it.y);
+        if(d<bird.r+it.r){
+            if(it.kind==="shield") shieldTimeVisible=180;
+            if(it.kind==="perk") openPerkChoice();
+            if(it.kind==="easterEgg") openEasterEggChoice();
+            items.splice(i,1);
         }
     });
 
-    if (shieldTime > 0) shieldTime--;
+    if(shieldTimeVisible>0) shieldTimeVisible--;
+    if(shieldTimeInvisible>0) shieldTimeInvisible--;
 }
 
 // --- DRAW ---
-function drawBird() {
-    ctx.fillStyle = "yellow";
+function drawBird(){
+    ctx.fillStyle="yellow";
     ctx.beginPath();
-    ctx.arc(bird.x, bird.y, bird.r, 0, Math.PI * 2);
+    ctx.arc(bird.x,bird.y,bird.r,0,Math.PI*2);
     ctx.fill();
-
-    ctx.fillStyle = "black";
+    ctx.fillStyle="black";
     ctx.beginPath();
-    ctx.arc(bird.x + 4, bird.y - 3, 2, 0, Math.PI * 2);
+    ctx.arc(bird.x+4,bird.y-3,2,0,Math.PI*2);
     ctx.fill();
 }
 
-function draw() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+function draw(){
+    ctx.clearRect(0,0,canvas.width,canvas.height);
 
-    pipes.forEach(p => {
-        ctx.fillStyle = "darkgreen";
-        ctx.fillRect(p.x, 0, p.width, p.gapY);
-        ctx.fillRect(p.x, p.gapY + p.gap, p.width, canvas.height);
+    pipes.forEach(p=>{
+        ctx.fillStyle="darkgreen";
+        ctx.fillRect(p.x,0,p.width,p.gapY);
+        ctx.fillRect(p.x,p.gapY+p.gap,p.width,canvas.height);
     });
 
-    items.forEach(it => {
-        if (it.kind === "perk") ctx.fillStyle = "purple";
-        else if (it.kind === "shield") ctx.fillStyle = "cyan";
-        else if (it.kind === "easterEgg") ctx.fillStyle = "orange";
+    items.forEach(it=>{
+        if(it.kind==="perk") ctx.fillStyle="purple";
+        else if(it.kind==="shield") ctx.fillStyle="cyan";
+        else if(it.kind==="easterEgg") ctx.fillStyle="orange";
         ctx.beginPath();
-        ctx.arc(it.x, it.y, it.r, 0, Math.PI * 2);
+        ctx.arc(it.x,it.y,it.r,0,Math.PI*2);
         ctx.fill();
     });
 
     drawBird();
 
-    ctx.fillStyle = "white";
-    ctx.fillText("Score: " + score, 10, 20);
+    if(shieldTimeVisible>0){
+        ctx.strokeStyle="cyan";
+        ctx.beginPath();
+        ctx.arc(bird.x,bird.y,bird.r+4,0,Math.PI*2);
+        ctx.stroke();
+    }
 
-    // perks menu
-    if (choosingPerk) {
-        ctx.fillStyle = "rgba(0,0,0,0.6)";
+    ctx.fillStyle="white";
+    ctx.fillText("Score: "+score,10,20);
+
+    if(choosingPerk){
+        ctx.fillStyle="rgba(0,0,0,0.6)";
         ctx.fillRect(0,0,canvas.width,canvas.height);
         perkChoices.forEach((p,i)=>{
-            const y = canvas.height/2-100 + i*120;
+            const y=canvas.height/2-100 + i*120;
             ctx.fillStyle="#333";
             ctx.fillRect(40,y,canvas.width-80,80);
             ctx.fillStyle="white";
@@ -277,12 +290,11 @@ function draw() {
         });
     }
 
-    // Easter Egg menu
-    if (choosingEasterEgg) {
-        ctx.fillStyle = "rgba(0,0,0,0.6)";
+    if(choosingEasterEgg){
+        ctx.fillStyle="rgba(0,0,0,0.6)";
         ctx.fillRect(0,0,canvas.width,canvas.height);
         easterEggChoices.forEach((p,i)=>{
-            const y = canvas.height/2-100 + i*120;
+            const y=canvas.height/2-100 + i*120;
             ctx.fillStyle="#333";
             ctx.fillRect(40,y,canvas.width-80,80);
             ctx.fillStyle="white";
@@ -291,15 +303,25 @@ function draw() {
         });
     }
 
-    if (gameOver) {
-        alert("Game Over! Score: " + score);
-        location.reload();
+    if(gameOver){
+        ctx.fillStyle="rgba(0,0,0,0.6)";
+        ctx.fillRect(0,0,canvas.width,canvas.height);
+        ctx.fillStyle="red";
+        ctx.font="30px Arial";
+        ctx.fillText("GAME OVER", canvas.width/2-80, canvas.height/2-20);
+        ctx.fillStyle="white";
+        ctx.fillText("Score: "+score, canvas.width/2-50, canvas.height/2+20);
+        ctx.fillText("Clique ou toque para reiniciar", canvas.width/2-140, canvas.height/2+60);
+
+        // permite reiniciar
+        canvas.addEventListener("mousedown", ()=>location.reload(), {once:true});
+        canvas.addEventListener("touchstart", ()=>location.reload(), {once:true});
     }
 }
 
-setInterval(spawnPipe, 1800);
+setInterval(spawnPipe,1800);
 
-function loop() {
+function loop(){
     update();
     draw();
     requestAnimationFrame(loop);
@@ -308,4 +330,3 @@ loop();
 </script>
 </body>
 </html>
-
